--- a/src/index.html
+++ b/src/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>JGoodIdea | Blockchain Specialist | Full Stack Developer</title>
+  <title>Leroy | Software Engineer</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="JGoodIdea | Blockchain Specialist | Full Stack Developer. This page is build by using Angular" />
-  <meta name="keywords" content="portfolio, Angular, Personal Portfolio, jgoodidea">
-  <meta property="og:title" content="JGoodIdea | Blockchain Specialist | Full Stack Developer " />
+  <meta name="description" content="Leroy | Software Engineer. This page is build by using Angular, Sanity" />
+  <meta name="keywords" content="Leroy, Alonzo, Portfolio, JavaScript, TypeScript, Angular, Personal, Sanity, Bootstrap, Calendly">
+  <meta property="og:title" content="Leroy | Software Engineer " />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://jgoodidea.netlify.app" />
-  <meta property="og:image" content="https://jgoodidea.netlify.app/assets/images/portfolio1.PNG" />
-  <meta data-rh="true" property="og:url" content="https://jgoodidea.netlify.app/">
-  <meta data-rh="true" property="al:web:url" content="https://jgoodidea.netlify.app/">
-  <meta property="og:description" content="JGoodIdea | Blockchain Specialist | Full Stack Developer. This page is build by using Angular" />
+  <meta property="og:url" content="https://leroyone.netlify.app" />
+  <meta property="og:image" content="https://leroyone.netlify.app/assets/images/card.jpg" />
+  <meta data-rh="true" property="og:url" content="https://leroyone.netlify.app/">
+  <meta data-rh="true" property="al:web:url" content="https://leroyone.netlify.app/">
+  <meta property="og:description" content="Leroy | Software Engineer. This page is build by using Angular, Sanity" />
   <meta name="twitter:creator" content="@jGoodIdea">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
